hard-gists/283860/run.log
=== Docker Run Log for 283860 ===
Started at: Mi 29. Okt 13:17:46 CET 2025

[2025-10-29 13:17:46] START: Running container for 283860
[2025-10-29 13:17:47] SUCCESS: Container 305efc096ef11d990070082fe53cc3ece1be20bbb9e4fec3b764b3193d4be020 started for 283860
=== Container logs for 283860 ===
  File "/snippet.py", line 101
    print "from %s to %s: %f" % (from_point.wkt, to_point.wkt, dist.meters)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 283860 ===
[2025-10-29 13:17:49] INFO: Container 305efc096ef11d990070082fe53cc3ece1be20bbb9e4fec3b764b3193d4be020 has stopped
